# melanin_click

./: .env.example  .gitignore  ALPHA_TESTING_PLAN.md  CONTRIBUTING.md  INSTALL.md  Install.md  LICENSE  README.md  STARTUP_GUIDE.md  TAURI_REFACTOR_TODO.md  TODO.md  TROUBLESHOOTING.md  USER_INSTALL_GUIDE.md  build_release.sh  melanin_click_alpha.sh  melanin_click_alpha_old.sh  melanin_click_terms_of_service.md  melanin_click_terms_of_use.md  melaninclick.bat  melaninclick.ps1  melaninclick.py  melaninclick.sh  melaninclick_linux.py  melaninclick_macos.py  melaninclick_macosintel.py  melaninclick_windows.py  melaninclickui.sh  run_alpha.sh  test_apk.sh  test_ci_locally.sh
.github/workflows/: build.yaml  ci.yml  release.yml
docs/: APK_TESTING_GUIDE.md  CODE_SIGNING_GUIDE.md  CONTRIBUTING.md  ENHANCEMENT_SUMMARY.md  ROADMAP.md  tauri_architecture_proposal.md
melanin_click_tauri/: GITHUB_ISSUES.md  README.md  debug_startup.sh  eslint.config.js  launch_dev.sh  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
melanin_click_tauri/.github/ISSUE_TEMPLATE/: bug_report.md
melanin_click_tauri/Melanin Click - Ready to Use/: Launch Melanin Click.command
melanin_click_tauri/Melanin Click - Ready to Use/Melanin Click.app/Contents/: Info.plist
melanin_click_tauri/src/: App.css  App.tsx
melanin_click_tauri/src-tauri/: Cargo.toml  tauri.conf.json
melanin_click_tauri/src-tauri/src/: android_lifecycle.rs  config.rs  core.rs  error_handler.rs  lib.rs  logging.rs  main.rs  mining.rs  mining_stats.rs  mobile.rs  monitoring.rs  node.rs  solo_mining.rs  stratum.rs  utils.rs  validation.rs
melanin_click_tauri/src/components/Common/: MiningRiskWarning.tsx  NotificationCenter.tsx  ProcessStatusBar.tsx
melanin_click_tauri/src/components/Layout/: Header.tsx
melanin_click_tauri/src/components/Mobile/: MobileMiningDashboard.tsx  MobileSettings.tsx  SoloMining.tsx
melanin_click_tauri/src/components/Onboarding/: SelectionPage.tsx  TermsPage.tsx  WelcomePage.tsx
melanin_click_tauri/src/components/Testing/: SoloMiningTest.tsx
melanin_click_tauri/src/components/__tests__/: App.test.tsx
melanin_click_tauri/src/hooks/: useNotifications.ts  useSystemInfo.ts
melanin_click_tauri/src/pages/: BitcoinPage.tsx  HomePage.tsx  MiningPage.tsx  SettingsPage.tsx  WhivePage.tsx
melanin_click_tauri/src/services/: tauri.ts
melanin_click_tauri/src/test/: setup.ts
melanin_click_tauri/src/types/: index.ts
tests/: frontend_integration_tests.js  run_tests.sh  test_all_functions.js
tests/unit/: rust_backend_tests.rs
