[package]
name = "melanin-click"
version = "2.0.0"
description = "Melanin Click - Bitcoin & Whive Desktop Client"
authors = ["Melanin Click Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "melanin_click_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"
sha2 = "0.10"
hex = "0.4"
dirs = "5.0"
sysinfo = "0.30"
flate2 = "1.0"
tar = "0.4"
# Mining and crypto dependencies
blake2 = "0.10"
scrypt = "0.11"
ring = "0.17"
# Network and Stratum client
tokio-tungstenite = "0.21"
url = "2.5"
base64 = "0.22"
uuid = { version = "1.0", features = ["v4"] }
# Address validation
bs58 = "0.5"
bech32 = "0.11"
# Performance and monitoring
chrono = { version = "0.4", features = ["serde"] }
crossbeam-channel = "0.5"

